Making link open in a new window

--- a/views/_includes/feedback.njk
+++ b/views/_includes/feedback.njk
@@ -47,7 +47,7 @@
     </form>
 
     <div class="mt-10 text-2xl border-l-0 pl-0">
-      <a href="{{__('feedback.help_link_url') }}">{{__('feedback.help_link_text')}}</a>
+      <a href="{{__('feedback.help_link_url') }}" target="_blank">{{__('feedback.help_link_text')}}</a>
     </div>
 
     <div id="feedback-confirmation" class="mt-2 px-8 py-6 rounded border border-gray-300 bg-gray-200 hidden">
