apply focus outline

--- a/assets/scss/components/_benefits.scss
+++ b/assets/scss/components/_benefits.scss
@@ -16,6 +16,11 @@
 
     &__header {
       @apply text-white font-bold pl-5 text-2xl p-4 bg-green-darker cursor-pointer;
+
+      &:focus {
+        @include focus(3px, 3px)
+      }
+      
       h3 {
         @apply inline;
       }
