--- a/views/_includes/feedback.njk
+++ b/views/_includes/feedback.njk
@@ -1,53 +1,55 @@
 <details class="w-full sm:w-1/2 md:w-3/5 lg:w-2/5 mt-20">
     <summary class="px-4 py-2 bg-gray-300 rounded text-center">{{ __('feedback.button') }}</summary>
+    <div class="px-8 py-6 rounded border border-gray-300 bg-gray-200">
+      <form action="/{{ getLocale() }}/feedback" method="post" class="" id="feedback-form">
+        <input type="hidden" name="_csrf" id="feedback-csrf" value="{{ csrfToken }}">
 
-    <form action="/{{ getLocale() }}/feedback" method="post" class="px-8 py-6 rounded border border-gray-300 bg-gray-200" id="feedback-form">
-      <input type="hidden" name="_csrf" id="feedback-csrf" value="{{ csrfToken }}">
+        <fieldset class="fieldset">
+          <legend class="fieldset__legend text-2xl font-normal mb-2">
+            {{ __('feedback.question') }}
+          </legend>
 
-      <fieldset class="fieldset">
-        <legend class="fieldset__legend">
-          {{ __('feedback.question') }}
-        </legend>
+          <div class="multiple-choice multiple-choice--checkboxes" id="">
+            <div class="multiple-choice__item">
+                <input id="incorrect_info" name="problems" type="checkbox" value="incorrect_info">
+                <label for="incorrect_info">{{ __('feedback.1') }}</label>
+            </div>
+            <div class="multiple-choice__item">
+                <input id="confusing_info" name="problems" type="checkbox" value="confusing_info">
+                <label for="confusing_info">{{ __('feedback.2') }}</label>
+            </div>
+            <div class="multiple-choice__item">
+                <input id="didnt_find" name="problems" type="checkbox" value="didnt_find">
+                <label for="didnt_find">{{ __('feedback.3') }}</label>
+            </div>
+            <div class="multiple-choice__item">
+                <input id="a11y_issue" name="problems" type="checkbox" value="a11y_issue">
+                <label for="a11y_issue">{{ __('feedback.4') }}</label>
+            </div>
+            <div class="multiple-choice__item">
+                <input id="privacy_concerns" name="problems" type="checkbox" value="privacy_concerns">
+                <label for="privacy_concerns">{{ __('feedback.5') }}</label>
+            </div>
+            <div class="multiple-choice__item">
+                <input id="other_issue" name="problems" type="checkbox" value="other_issue">
+                <label for="other_issue">{{ __('feedback.6') }}</label>
+            </div>
+          </div>
+        </fieldset>
 
-        <div class="multiple-choice multiple-choice--checkboxes" id="">
-          <div class="multiple-choice__item">
-              <input id="incorrect_info" name="problems" type="checkbox" value="incorrect_info">
-              <label for="incorrect_info">{{ __('feedback.1') }}</label>
-          </div>
-          <div class="multiple-choice__item">
-              <input id="confusing_info" name="problems" type="checkbox" value="confusing_info">
-              <label for="confusing_info">{{ __('feedback.2') }}</label>
-          </div>
-          <div class="multiple-choice__item">
-              <input id="didnt_find" name="problems" type="checkbox" value="didnt_find">
-              <label for="didnt_find">{{ __('feedback.3') }}</label>
-          </div>
-          <div class="multiple-choice__item">
-              <input id="a11y_issue" name="problems" type="checkbox" value="a11y_issue">
-              <label for="a11y_issue">{{ __('feedback.4') }}</label>
-          </div>
-          <div class="multiple-choice__item">
-              <input id="privacy_concerns" name="problems" type="checkbox" value="privacy_concerns">
-              <label for="privacy_concerns">{{ __('feedback.5') }}</label>
-          </div>
-          <div class="multiple-choice__item">
-              <input id="other_issue" name="problems" type="checkbox" value="other_issue">
-              <label for="other_issue">{{ __('feedback.6') }}</label>
-          </div>
+        <div class="mt-6">
+          <label for="feedback-details" class="font-normal mb-2 text-2xl">{{ __('feedback.tell_us_more') }}</label>
+          <span id="feedback-details-hint">{{ __('feedback.personal_warning') | safe }}</span>
+          <textarea name="details" class="h-40" id="feedback-details" aria-describedby="feedback-details-hint"></textarea>
         </div>
-      </fieldset>
 
-      <div class="mt-6">
-        <label for="feedback-details" class="font-semibold">{{ __('feedback.tell_us_more') }}</label>
-        <span id="feedback-details-hint">{{ __('feedback.personal_warning') | safe }}</span>
-        <textarea name="details" class="h-40" id="feedback-details" aria-describedby="feedback-details-hint"></textarea>
+        <button class="mt-8 py-3 px-4 border shadow bg-blue-800 w-auto" type="submit">{{ __('feedback.submit') }}</button>
+
+      </form>
+
+      <div class="mt-10 text-2xl border-l-0 pl-0">
+        <a href="{{__('feedback.help_link_url') }}" target="_blank">{{__('feedback.help_link_text')}}</a>
       </div>
-
-      <button class="mt-8 py-3 px-4 border shadow bg-blue-800 w-auto" type="submit">{{ __('feedback.submit') }}</button>
-    </form>
-
-    <div class="mt-10 text-2xl border-l-0 pl-0">
-      <a href="{{__('feedback.help_link_url') }}" target="_blank">{{__('feedback.help_link_text')}}</a>
     </div>
 
     <div id="feedback-confirmation" class="mt-2 px-8 py-6 rounded border border-gray-300 bg-gray-200 hidden">
