Adding new feedback option
Adding "You don't know where to go for help." to feedback form.
Updated feedback controller

--- a/views/_includes/feedback.njk
+++ b/views/_includes/feedback.njk
@@ -30,6 +30,12 @@
                 <input id="privacy_concerns" name="problems" type="checkbox" value="privacy_concerns">
                 <label for="privacy_concerns">{{ __('feedback.5') }}</label>
             </div>
+
+            <div class="multiple-choice__item">
+                <input id="dont_know" name="problems" type="checkbox" value="dont_know">
+                <label for="dont_know">{{ __('feedback.dont_know') }}</label>
+            </div>
+
             <div class="multiple-choice__item">
                 <input id="other_issue" name="problems" type="checkbox" value="other_issue">
                 <label for="other_issue">{{ __('feedback.6') }}</label>
