--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -5,8 +5,8 @@
     <h1>{{ __('start.title') }}</h1>
 
     <div class="bg-red-100 border-l-4 border-red-800 p-4 mt-8 hidden cookie-warning">
-        <h2 class="text-2xl">Enable cookies to use this service</h2>
-        <p class="p-0">It looks like you have cookies disabled. This service uses cookies to show your results. You will not see results without enabling cookies.</p>
+        <h2 class="text-2xl">{{ __('start.enable_cookies_title') }}</h2>
+        <p class="p-0">{{ __('start.enable_cookies_body') }}</p>
     </div>
 
     <div>
