#major Redesigned Results Page (#478)
* Humble beginnings for the new results page
changed the markup accordingly in CESB (minus some needed SVGS)
setup a blank js file for the accordions with some todos

* use tailwind @apply syntax

* move more tailwind styles out using @apply

* move list styles out using tailwind @apply

* remove extra list styles that had no effect

* improved spacing around benefitli

* move some more styles to tailwind @apply for simpler benefits cards

* fix typo and use new featured list class

* add padding to bottom of benefits

* add container element for show/hide

* remove tabindex and unnecessary var

* get basic show more/less functionality going

* dynamically generate benefit list

* localize $

* add keyboard navigation help

* move out to helper file

* add localization

* add plus/minus imgs

* move i18n function to separate js file so it can be used elsewhere

* demote all headings

* cleanup a bit

* add toggle for outer benefits list

* add underline to text

* fix button alignment/text

* move strings out to locale files

* update colors to use custom tailwind colors

* don't return GST in unavailable

* changed section title

* add x-padding to benefits card containers

* add spacing between major sections

* improvements to heading sizes

* tighten up spacing between headings/sections

* add max-width to benefits lists for readability

* don't display if no benefits, add some spacing below alert

* update changelog

* remove fill=none on svg so it can be seen

* fix spacing below the start button

* get tests to passing after results screen changes

* refactor all benefit cards to use benefit template

* don't need all that js anymore, convert what's left to vanillajs

* update styles for new markup

* add a little space

* use a template for benefit cards

* add data-cy attribute

* check existence of elements first

* bust some ca

--- a/views/benefits/cerb-fr.njk
+++ b/views/benefits/cerb-fr.njk
@@ -1,29 +1,30 @@
-<div class="m-5 p-5 shadow-result" data-cy="cerb-benefit">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="cerb">
-    {{__("cerb.header")}}
-  </h2>
+{% set sectionId = 'cerb' %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("500 $ par semaine") }}
-    {{ blueLI("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
-    {{ blueLI("À recevoir au plus tard 10 jours après la demande") }}
+{% block header %}
+  {{__("cerb.header")}}
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("500 $ par semaine") }}
+  {{ benefitLi("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
+  {{ benefitLi("À recevoir au plus tard 10 jours après la demande") }}
+{% endblock %}
+
+{% block body %}
+  <strong>Prochaines étapes :</strong>
+  <ul>
+    <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
+    <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
+    <li>Ces montants sont imposables.</li>
   </ul>
+{% endblock %}
 
-  <div class="pb-5 mt-6">
-
-    <strong>Prochaines étapes :</strong>
-    <ul class='list-outside list-disc'>
-      <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
-      <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
-      <li>Ces montants sont imposables.</li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "cerb",
-        "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
-        "Découvrez comment appliquer"
-    )}}
-</div>
+      "cerb",
+      "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
+      "Découvrez comment appliquer"
+  )}}
+{% endblock %}
