--- a/views/benefits/ccb_payment-en.njk
+++ b/views/benefits/ccb_payment-en.njk
@@ -1,35 +1,36 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="ccb_payment">
-    {{__("ccb_payment.header")}}
-  </h2>
+{% set sectionId = 'ccb_payment' %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("Automatic payment in May") }}
-    {{ blueLI("$300 per child") }}
+{% block header %}
+  {{__("ccb_payment.header")}}
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("Automatic payment in May") }}
+  {{ benefitLi("$300 per child") }}
+{% endblock %}
+
+{% block body %}
+  <strong>The benefit can help if you:</strong>
+  <ul>
+    <li>Care for a child under 18 years old.</li>
   </ul>
 
-  <div class="pb-5 mt-6">
+  <strong>Good to know:</strong>
+  <ul>
+    <li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li>
+    <li>
+      <a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.html'
+        target='_blank'>Dates of payments are available</a> online.
+    </li>
+  </ul>
+{% endblock %}
 
-    <strong>The benefit can help if you:</strong>
-    <ul class='list-disc list-outside'>
-      <li>Care for a child under 18 years old.</li>
-    </ul>
-
-    <strong>Good to know:</strong>
-    <ul class='list-disc list-outside'>
-      <li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li>
-      <li>
-        <a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.html'
-          target='_blank'>Dates of payments are available</a> online.
-      </li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "ccb_payment",
-        "https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-child-benefit-overview.html",
-        "Learn more about the Canada Child Benefit"
-    )}}
-</div>
+      "ccb_payment",
+      "https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-child-benefit-overview.html",
+      "Learn more about the Canada Child Benefit"
+  )}}
+{% endblock %}
