--- a/views/benefits/ccb_payment-fr.njk
+++ b/views/benefits/ccb_payment-fr.njk
@@ -1,33 +1,34 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="ccb_payment">
-    {{__("ccb_payment.header")}}
-  </h2>
+{% set sectionId = 'ccb_payment' %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("Versement automatique au mois de mai ") }}
-    {{ blueLI("300 $ par enfant ") }}
+{% block header %}
+  {{__("ccb_payment.header")}}
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("Versement automatique au mois de mai ") }}
+  {{ benefitLi("300 $ par enfant ") }}
+{% endblock %}
+
+{% block body %}
+  <strong>Cette prestation peut vous aider si :</strong>
+  <ul>
+    <li>vous avez la charge d’un enfant de moins de 18 ans. </li>
   </ul>
 
-  <div class="pb-5 mt-6">
+  <strong>Bon à savoir :</strong>
+  <ul>
+    <li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li>
+    <li>
+      <a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html' target='_blank'>Consultez les dates de versement des prestations</a>.</li>
+  </ul>
+{% endblock %}
 
-    <strong>Cette prestation peut vous aider si :</strong>
-    <ul class='list-disc list-outside'>
-      <li>vous avez la charge d’un enfant de moins de 18 ans. </li>
-    </ul>
-
-    <strong>Bon à savoir :</strong>
-    <ul class='list-disc list-outside'>
-      <li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li>
-      <li>
-        <a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html' target='_blank'>Consultez les dates de versement des prestations</a>.</li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "ccb_payment",
-        "https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/allocation-canadienne-enfants-apercu.html",
-        "En savoir plus à propos de l’Allocation canadienne pour enfant"
-    )}}
-</div>
+      "ccb_payment",
+      "https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/allocation-canadienne-enfants-apercu.html",
+      "En savoir plus à propos de l’Allocation canadienne pour enfant"
+  )}}
+{% endblock %}
