--- a/views/benefits/ei_workshare-fr.njk
+++ b/views/benefits/ei_workshare-fr.njk
@@ -1,31 +1,33 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="ei_workshare">
-    {{__("ei_workshare.header")}}
-  </h2>
+{% set sectionId = 'ei_workshare' %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("Recevoir des prestations d’assurance-emploi") }}
-    {{ blueLI("Pendant 76 semaines maximum") }}
+{% block header %}
+  {{__("ei_workshare.header")}}
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("Recevoir des prestations d’assurance-emploi") }}
+  {{ benefitLi("Pendant 76 semaines maximum") }}
+{% endblock %}
+
+{% block body %}
+  <strong>Cette prestation peut vous aider si :</strong>
+  <ul>
+    <li>vos heures de travail ont été réduites de 10 à 60 % en raison de la COVID-19.</li>
   </ul>
 
-  <div class="pb-5 mt-6">
-    <strong>Cette prestation peut vous aider si :</strong>
-    <ul class='list-disc list-outside'>
-      <li>vos heures de travail ont été réduites de 10 à 60 % en raison de la COVID-19.</li>
-    </ul>
+  <strong>Pour ce faire :</strong>
+  <ul>
+    <li>Vous devrez conclure une entente avec votre employeur et les autres employés effectuant les mêmes tâches que vous.</li>
+    <li>Tous les employés qui effectuent les mêmes tâches que vous doivent accepter de partager la charge de travail équitablement, et votre employeur doit aussi accepter.</li>
+  </ul>
+{% endblock %}
 
-    <strong>Pour ce faire :</strong>
-    <ul class='list-disc list-outside'>
-      <li>Vous devrez conclure une entente avec votre employeur et les autres employés effectuant les mêmes tâches que vous.</li>
-      <li>Tous les employés qui effectuent les mêmes tâches que vous doivent accepter de partager la charge de travail équitablement, et votre employeur doit aussi accepter.</li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "ei_workshare",
-        "https://www.canada.ca/fr/emploi-developpement-social/ministere/avis/coronavirus.html#h4.02",
-        "En savoir plus à propos du programme Travail partagé de l’assurance-emploi"
-    )}}
-</div>
+    "ei_workshare",
+    "https://www.canada.ca/fr/emploi-developpement-social/ministere/avis/coronavirus.html#h4.02",
+    "En savoir plus à propos du programme Travail partagé de l’assurance-emploi"
+  )}}
+{% endblock %}
