--- a/views/benefits/gst_credit-en.njk
+++ b/views/benefits/gst_credit-en.njk
@@ -1,42 +1,28 @@
-<div class="m-5 p-5 shadow-result">
-  <h3 class="text-2xl font-bold mb-6" id="gst_credit">
-    {{ __("gst_credit.header") }}
-  </h3>
+{% extends "benefit-template.njk" %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("Automatic payment in April if you already receive the GST credit") }}
+{% set sectionId = 'gst_credit' %}
 
-    <li>
-      <div class="bg-blue-200 p-5 m-1 text-blue-800">
-        <p class="relative m-0 pl-8 ">
-          <img src="{{ asset('/img/check-circle.svg') }}" class="w-6 h-6 mt-1 -ml-8 absolute fill-current" alt="">
-          <strong>On average:</strong>
-          <ul class='list-none  mt-2'>
-            <li>
-              <strong>$400 for single people</strong>
-            </li>
-            <li>
-              <strong>$600 for couples</strong>
-            </li>
-          </ul>
-        </p>
-      </div>
-    </li>
-    {{ blueLI("Amount depends on your 2018 income taxes") }}
+{% block header %}
+  {{ __("gst_credit.header") }}
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("Automatic payment in April if you already receive the GST credit") }}
+  {{ benefitLi("On average:<br>$400 for single people<br>$600 for couples") }}
+  {{ benefitLi("Amount depends on your 2018 income taxes") }}
+{% endblock %}
+
+{% block body %}
+  <strong>Good to know:</strong>
+  <ul>
+    <li>You don’t need to do anything to receive this payment. It was sent automatically if you already receive the GST credit, starting April 9.</li>
+    <li>Check your bank account or mailbox to see if you’ve received it.</li>
   </ul>
+{% endblock %}
 
-  <div class="pb-5 mt-6">
-
-    <strong>Good to know:</strong>
-    <ul class='list-disc list-outside'>
-      <li>You don’t need to do anything to receive this payment. It was sent automatically if you already receive the GST credit, starting April 9.</li>
-      <li>Check your bank account or mailbox to see if you’ve received it.</li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink("gst_credit",
-        "https://www.canada.ca/en/revenue-agency/services/child-family-benefits/covid-19-gsthstc-increase.html",
-        "Learn more about the GST credit"
-    )}}
-</div>
+    "https://www.canada.ca/en/revenue-agency/services/child-family-benefits/covid-19-gsthstc-increase.html",
+    "Learn more about the GST credit"
+  )}}
+{% endblock %}
