--- a/views/benefits/mortgage_deferral-en.njk
+++ b/views/benefits/mortgage_deferral-en.njk
@@ -1,27 +1,28 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="mortgage_deferral">
-    {{__("mortgage_deferral.header")}}
-  </h2>
+{% set sectionId = 'mortgage_deferral' %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("Skip mortgage payments until you’re able to pay again") }}
+{% block header %}
+  {{__("mortgage_deferral.header")}}
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("Skip mortgage payments until you’re able to pay again") }}
+{% endblock %}
+
+{% block body %}
+  <strong>Good to know:</strong>
+  <ul>
+    <li>The bank will still charge interest.</li>
+    <li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li>
+    <li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage.</li>
   </ul>
+{% endblock %}
 
-  <div class="pb-5 mt-6">
-
-    <strong>Good to know:</strong>
-    <ul class='list-disc list-outside'>
-      <li>The bank will still charge interest.</li>
-      <li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li>
-      <li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage.</li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "mortgage_deferral",
-        "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19",
-        "Learn more about help with your mortgage"
-    )}}
-</div>
+    "mortgage_deferral",
+    "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19",
+    "Learn more about help with your mortgage"
+  )}}
+{% endblock %}
