--- a/views/benefits/mortgage_deferral-fr.njk
+++ b/views/benefits/mortgage_deferral-fr.njk
@@ -1,27 +1,28 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="mortgage_deferral">
-    {{__("mortgage_deferral.header")}}
-  </h2>
+{% set sectionId = 'mortgage_deferral' %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("Interrompez vos paiements hypothécaires jusqu’à ce que vous puissiez les payer à nouveau") }}
+{% block header %}
+  {{__("mortgage_deferral.header")}}
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("Interrompez vos paiements hypothécaires jusqu’à ce que vous puissiez les payer à nouveau") }}
+{% endblock %}
+
+{% block body %}
+  <strong>Bon à savoir :</strong>
+  <ul>
+    <li>La banque chargera quand même de l’intérêt.</li>
+    <li> Lorsque vous pourrez effectuer vos paiements à nouveau, vous devrez payer l’intérêt encouru depuis le sursis en plus de vos paiements réguliers.</li>
+    <li> Vous pouvez aussi parler à votre banque à propos de plans de paiements spéciaux afin de ré-amortir votre hypothèque.</li>
   </ul>
+{% endblock %}
 
-  <div class="pb-5 mt-6">
-
-    <strong>Bon à savoir :</strong>
-    <ul class='list-disc list-outside'>
-      <li>La banque chargera quand même de l’intérêt.</li>
-      <li> Lorsque vous pourrez effectuer vos paiements à nouveau, vous devrez payer l’intérêt encouru depuis le sursis en plus de vos paiements réguliers.</li>
-      <li> Vous pouvez aussi parler à votre banque à propos de plans de paiements spéciaux afin de ré-amortir votre hypothèque.</li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "mortgage_deferral",
-        "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19?l=fr",
-        "En savoir plus à propos du soutien hypothécaire"
-    )}}
-</div>
+    "mortgage_deferral",
+    "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19?l=fr",
+    "En savoir plus à propos du soutien hypothécaire"
+  )}}
+{% endblock %}
