--- a/views/benefits/oas-fr.njk
+++ b/views/benefits/oas-fr.njk
@@ -1,32 +1,33 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="oas">
-    {{__("oas.header")}}
-  </h2>
+{% set sectionId = 'oas' %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("Paiement unique de 300 $, non imposable, si vous êtes admissible à la pension de la Sécurité de vieillesse (SV) 
-      <br><br>
-      OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)
-      <br><br>
-      OU paiement unique de 500 $, non imposable, si vous recevez L’Allocation ou l’Allocation au survivant") }}
-    {{ blueLI("Le paiement sera envoyé dès que possible") }}
+{% block header %}
+  {{__("oas.header") }}
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("Paiement unique de 300 $, non imposable, si vous êtes admissible à la pension de la Sécurité de vieillesse (SV) 
+    <br><br>
+    OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)
+    <br><br>
+    OU paiement unique de 500 $, non imposable, si vous recevez L’Allocation ou l’Allocation au survivant") }}
+  {{ benefitLi("Le paiement sera envoyé dès que possible") }}
+{% endblock %}
+
+{% block body %}
+  <strong>Bon à savoir :</strong>
+  <ul>
+    <li>Vous recevrez ce paiement si vous êtes admissible à la pension ou aux programmes connexes de la SV en juin 2020.</li>
+    <li>Vous devenez admissibles à la pension de la SV le mois suivant votre 65ème anniversaire. Si votre 65ème anniversaire est en juin 2020, vous ne recevrez pas ce paiement.</li>
+    <li>Les paiements seront déposés automatiquement. Vous n’avez pas à faire quoi que ce soit pour le recevoir.</li>
   </ul>
+{% endblock %}
 
-  <div class="pb-5 mt-6">
-
-    <strong>Bon à savoir :</strong>
-    <ul class='list-disc list-outside'>
-      <li>Vous recevrez ce paiement si vous êtes admissible à la pension ou aux programmes connexes de la SV en juin 2020.</li>
-      <li>Vous devenez admissibles à la pension de la SV le mois suivant votre 65ème anniversaire. Si votre 65ème anniversaire est en juin 2020, vous ne recevrez pas ce paiement.</li>
-      <li>Les paiements seront déposés automatiquement. Vous n’avez pas à faire quoi que ce soit pour le recevoir.</li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "oas",
-        "https://www.canada.ca/fr/services/prestations/pensionspubliques/avis-covid-19/paiement-unique.html",
-        "En savoir plus à propos de l’aide pour les aînés"
-    )}}
-</div>
+    "oas",
+    "https://www.canada.ca/fr/services/prestations/pensionspubliques/avis-covid-19/paiement-unique.html",
+    "En savoir plus à propos de l’aide pour les aînés"
+  )}}
+{% endblock %}
