--- a/views/benefits/province-ab-fr.njk
+++ b/views/benefits/province-ab-fr.njk
@@ -1,18 +1,19 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="province-ab">
-    {{__("province-ab.header")}}
-  </h2>
+{% set sectionId = 'province-ab' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("province-ab.header")}}
+{% endblock %}
 
-    <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% block body %}
+  <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-ab",
-        "https://www.alberta.ca/covid-19-supports-for-albertans.aspx",
-        "En savoir plus à propos du plan de l’Alberta (anglais seulement)"
-    )}}
-</div>
+    "province-ab",
+    "https://www.alberta.ca/covid-19-supports-for-albertans.aspx",
+    "En savoir plus à propos du plan de l’Alberta (anglais seulement)"
+  )}}
+{% endblock %}
