--- a/views/benefits/province-bc-fr.njk
+++ b/views/benefits/province-bc-fr.njk
@@ -1,18 +1,19 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="province-bc">
-    {{__("province-bc.header")}}
-  </h2>
+{% set sectionId = 'province-bc' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("province-bc.header")}}
+{% endblock %}
 
-    <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% block body %}
+  <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-bc",
-        "https://www2.gov.bc.ca/gov/content/safety/emergency-preparedness-response-recovery/covid-19-provincial-support/financial-benefits#individuals",
-        "En savoir plus à propos des prestations de la C.-B. (anglais seulement)"
-    )}}
-</div>
+    "province-bc",
+    "https://www2.gov.bc.ca/gov/content/safety/emergency-preparedness-response-recovery/covid-19-provincial-support/financial-benefits#individuals",
+    "En savoir plus à propos des prestations de la C.-B. (anglais seulement)"
+  )}}
+{% endblock %}
