--- a/views/benefits/province-mb-fr.njk
+++ b/views/benefits/province-mb-fr.njk
@@ -1,18 +1,19 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="province-mb">
-    {{__("province-mb.header")}}
-  </h2>
+{% set sectionId = 'province-mb' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("province-mb.header")}}
+{% endblock %}
 
-    <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% block body %}
+  <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-mb",
-        "https://www.gov.mb.ca/covid19/infomanitobans/index.fr.html#individuals",
-        "En savoir plus à propos des prestations du Manitoba"
-    )}}
-</div>
+    "province-mb",
+    "https://www.gov.mb.ca/covid19/infomanitobans/index.fr.html#individuals",
+    "En savoir plus à propos des prestations du Manitoba"
+  )}}
+{% endblock %}
