--- a/views/benefits/province-nl-fr.njk
+++ b/views/benefits/province-nl-fr.njk
@@ -1,18 +1,19 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="province-nl">
-    {{__("province-nl.header")}}
-  </h2>
+{% set sectionId = 'province-nl' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("province-nl.header")}}
+{% endblock %}
 
-    <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% block body %}
+  <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-nl",
-        "https://www.gov.nl.ca/covid-19/fr/ressources/",
-        "En savoir plus à propos du plan de Terre-Neuve-et-Labrador"
-    )}}
-</div>
+    "province-nl",
+    "https://www.gov.nl.ca/covid-19/fr/ressources/",
+    "En savoir plus à propos du plan de Terre-Neuve-et-Labrador"
+  )}}
+{% endblock %}
