--- a/views/benefits/province-ns-fr.njk
+++ b/views/benefits/province-ns-fr.njk
@@ -1,18 +1,19 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="province-ns">
-    {{__("province-ns.header")}}
-  </h2>
+{% set sectionId = 'province-ns' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("province-ns.header")}}
+{% endblock %}
 
-    <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% block body %}
+  <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-ns",
-        "https://novascotia.ca/coronavirus/support/fr/",
-        "En savoir plus à propos des prestations de la Nouvelle-Écosse"
-    )}}
-</div>
+    "province-ns",
+    "https://novascotia.ca/coronavirus/support/fr/",
+    "En savoir plus à propos des prestations de la Nouvelle-Écosse"
+  )}}
+{% endblock %}
