--- a/views/benefits/province-on-en.njk
+++ b/views/benefits/province-on-en.njk
@@ -1,22 +1,24 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="province-on">
-    {{__("province-on.header")}}
-  </h2>
+{% set sectionId = 'province-on' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("province-on.header")}}
+{% endblock %}
 
-    <p>Some provincial and territorial governments are offering additional support for people during COVID-19.</p>
+{% block body %}
+  <p>Some provincial and territorial governments are offering additional support for people during COVID-19.</p>
 
-    <strong>Good to know:</strong>
-    <ul class='list-outside list-disc'>
-      <li>Information for <a href="https://www.ontario.ca/page/covid-19-support-workers" target="_blank">health care workers and others who are working in Ontario</a>.</li>
-    </ul>
-  </div>
+  <strong>Good to know:</strong>
+  <ul>
+    <li>Information for <a href="https://www.ontario.ca/page/covid-19-support-workers" target="_blank">health care workers and others who are working in Ontario</a>.</li>
+  </ul>
+{% endblock %}
 
+{% block info_link %}
   {{ infoLink(
-        "province-on",
-        "https://www.ontario.ca/page/covid-19-support-people",
-        "Learn more about Ontario benefits"
-    )}}
-</div>
+    "province-on",
+    "https://www.ontario.ca/page/covid-19-support-people",
+    "Learn more about Ontario benefits"
+  )}}
+{% endblock %}
