--- a/views/benefits/province-sk-en.njk
+++ b/views/benefits/province-sk-en.njk
@@ -1,18 +1,19 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="province-sk">
-    {{__("province-sk.header")}}
-  </h2>
+{% set sectionId = 'province-sk' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("province-sk.header")}}
+{% endblock %}
 
-    <p>Some provincial governments are offering additional support for people during COVID-19.</p>
+{% block body %}
+  <p>Some provincial governments are offering additional support for people during COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-sk",
-        "https://www.saskatchewan.ca/government/health-care-administration-and-provider-resources/treatment-procedures-and-guidelines/emerging-public-health-issues/2019-novel-coronavirus/covid-19-information-for-businesses-and-workers/support-for-workers#saskatchewan-support",
-        "Learn more about Saskatchewan benefits"
-    )}}
-</div>
+    "province-sk",
+    "https://www.saskatchewan.ca/government/health-care-administration-and-provider-resources/treatment-procedures-and-guidelines/emerging-public-health-issues/2019-novel-coronavirus/covid-19-information-for-businesses-and-workers/support-for-workers#saskatchewan-support",
+    "Learn more about Saskatchewan benefits"
+  )}}
+{% endblock %}
