--- a/views/benefits/province-yt-en.njk
+++ b/views/benefits/province-yt-en.njk
@@ -1,18 +1,19 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="province-yt">
-    {{__("province-yt.header")}}
-  </h2>
+{% set sectionId = 'province-yt' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("province-yt.header")}}
+{% endblock %}
 
-    <p>Some provincial and territorial governments are offering additional support for people during COVID-19.</p>
+{% block body %}
+  <p>Some provincial and territorial governments are offering additional support for people during COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-yt",
-        "https://yukon.ca/en/covid-19-support-yukoners",
-        "Learn more about Yukon‘s response"
-    )}}
-</div>
+    "province-yt",
+    "https://yukon.ca/en/covid-19-support-yukoners",
+    "Learn more about Yukon‘s response"
+  )}}
+{% endblock %}
