--- a/views/benefits/rent_help-en.njk
+++ b/views/benefits/rent_help-en.njk
@@ -1,21 +1,22 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="rent_help">
-    {{__("rent_help.header")}}
-  </h2>
+{% set sectionId = 'rent_help' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("rent_help.header")}}
+{% endblock %}
 
-    <ul class='list-disc list-outside'>
-      <li>Provincial governments are in charge of rental housing rules.</li>
-      <li> In most provinces and territories, you cannot be evicted for not paying rent.</li>
-    </ul>
+{% block body %}
+  <ul>
+    <li>Provincial governments are in charge of rental housing rules.</li>
+    <li> In most provinces and territories, you cannot be evicted for not paying rent.</li>
+  </ul>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "rent_help",
-        "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
-        "Check with your provincial government for more details"
-    )}}
-</div>
+    "rent_help",
+    "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
+    "Check with your provincial government for more details"
+  )}}
+{% endblock %}
