--- a/views/benefits/rrif-en.njk
+++ b/views/benefits/rrif-en.njk
@@ -1,20 +1,21 @@
-<div class="m-5 p-5 shadow-result" data-cy="rrif-benefit">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="rrif">
-    {{__("rrif.header")}}
-  </h2>
+{% set sectionId = 'rrif' %}
 
-  <div class="pb-5 mt-6">
+{% block header %}
+  {{__("rrif.header") }}
+{% endblock %}
 
-    <ul class='list-disc list-outside'>
-      <li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money.</li>
-    </ul>
+{% block body %}
+  <ul>
+    <li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money.</li>
+  </ul>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "rrif",
-        "https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-retirement-income-fund-rrif.html",
-        "Contact your bank for more details"
-    )}}
-</div>
+    "rrif",
+    "https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-retirement-income-fund-rrif.html",
+    "Contact your bank for more details"
+  )}}
+{% endblock %}
