--- a/views/benefits/rrif-fr.njk
+++ b/views/benefits/rrif-fr.njk
@@ -1,21 +1,24 @@
-<div class="m-5 p-5 shadow-result" data-cy="rrif-benefit">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="rrif">
-    {{__("rrif.header")}}
-  </h2>
+{% set sectionId = 'rrif' %}
 
-  <div class="pb-5 mt-6">
-    <ul class='list-disc list-outside'>
-      <li>
-        Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire
-        en 2020 sera 25% plus bas afin que vous puissiez économiser.
-      </li>
-    </ul>
-  </div>
+{% block header %}
+  {{__("rrif.header")}}
+{% endblock %}
 
+{% block body %}
+  <ul>
+    <li>
+      Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire
+      en 2020 sera 25% plus bas afin que vous puissiez économiser.
+    </li>
+  </ul>
+{% endblock %}
+
+{% block info_link %}
   {{ infoLink(
-        "rrif",
-        "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/sujets/fonds-enregistre-revenu-retraite-ferr.html",
-        "Contactez votre banque pour plus de détails"
-    )}}
-</div>
+    "rrif",
+    "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/sujets/fonds-enregistre-revenu-retraite-ferr.html",
+    "Contactez votre banque pour plus de détails"
+  )}}
+{% endblock %}
