--- a/views/benefits/student_financial_aid-fr.njk
+++ b/views/benefits/student_financial_aid-fr.njk
@@ -1,33 +1,37 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="student_financial_aid">
-    {{__("student_financial_aid.header")}}
-  </h2>
+{% set sectionId = 'student_financial_aid' %}
 
-  <strong>Hausse des bourses et prêts canadiens d’études</strong>
+{% block header %}
+  {{__("student_financial_aid.header")}}
+{% endblock %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
-    {{ blueLI("Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel") }}
-    {{ blueLI("Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge") }}
-    {{ blueLI("Doublement des montants des bourses canadiennes pour étudiants qui ont une incapacité permanente") }}
-    {{ blueLI("Exemption de la contribution de l’étudiant et de l’époux") }}
-    {{ blueLI("Jusqu’à 350 $ par semaine pour les prêts étudiants") }}
+{% block preamble %}
+  Hausse des bourses et prêts canadiens d’études
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("Jusqu’à 6000 $ en bourses pour les étudiants à temps plein") }}
+  {{ benefitLi("Jusqu’à 3600 $ en bourses pour les étudiants à temps partiel") }}
+  {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont des personnes à charge") }}
+  {{ benefitLi("Doublement des montants des bourses canadiennes pour étudiants qui ont une incapacité permanente") }}
+  {{ benefitLi("Exemption de la contribution de l’étudiant et de l’époux") }}
+  {{ benefitLi("Jusqu’à 350 $ par semaine pour les prêts étudiants") }}
+{% endblock %}
+
+{% block body %}
+  <strong>Bon à savoir :</strong>
+  <ul>
+    <li>Ce programme d’aide sera disponible dès le 1er août 2020.</li>
+    <li>Ce programme est disponible pendant 1 an.</li>
+    <li>Vous pouvez appliquer dans <a href="https://www.canada.ca/fr/services/prestations/education/aide-etudiants/bourses-prets/province-demande.html" target="_blank">votre province ou territoire de résidence</a>.</li>
   </ul>
+{% endblock %}
 
-  <div class="pb-5 mt-6">
-    <strong>Bon à savoir :</strong>
-    <ul class='list-outside list-disc'>
-      <li>Ce programme d’aide sera disponible dès le 1er août 2020.</li>
-      <li>Ce programme est disponible pendant 1 an.</li>
-      <li>Vous pouvez appliquer dans <a href="https://www.canada.ca/fr/services/prestations/education/aide-etudiants/bourses-prets/province-demande.html" target="_blank">votre province ou territoire de résidence</a>.</li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "student_financial_aid",
-        "https://www.canada.ca/fr/services/prestations/education/aide-etudiants/avis-covid-19.html",
-        "En savoir plus à propos de l’aide financière pour étudiants"
-    )}}
-</div>
+    "student_financial_aid",
+    "https://www.canada.ca/fr/services/prestations/education/aide-etudiants/avis-covid-19.html",
+    "En savoir plus à propos de l’aide financière pour étudiants"
+  )}}
+{% endblock %}
