--- a/views/benefits/student_loan-en.njk
+++ b/views/benefits/student_loan-en.njk
@@ -1,28 +1,29 @@
-<div class="m-5 p-5 shadow-result">
+{% extends "benefit-template.njk" %}
 
-  <h2 class="text-2xl font-bold mb-6" id="student_loan">
-    {{__("student_loan.header")}}
-  </h2>
+{% set sectionId = 'student_loan' %}
 
-  <ul class="list-none list-outside pl-0">
-    {{ blueLI("Payments automatically paused") }}
-    {{ blueLI("From March 30, 2020 until September 30, 2020") }}
+{% block header %}
+  {{__("student_loan.header")}}
+{% endblock %}
+
+{% block featured_list_items %}
+  {{ benefitLi("Payments automatically paused") }}
+  {{ benefitLi("From March 30, 2020 until September 30, 2020") }}
+{% endblock %}
+
+{% block body %}
+  <strong>Good to know:</strong>
+  <ul>
+    <li>You don’t need to apply to pause your payments.</li>
+    <li> Pre-authorized payments are stopped.</li>
+    <li> Log in to your <a href='https://www.csnpe-nslsc.canada.ca/en/home' target='_blank'>National Student Loans Service Centre</a> account to see how much you will save.</li>
   </ul>
+{% endblock %}
 
-  <div class="pb-5 mt-6">
-
-    <strong>Good to know:</strong>
-    <ul class='list-disc list-outside'>
-      <li>You don’t need to apply to pause your payments.</li>
-      <li> Pre-authorized payments are stopped.</li>
-      <li> Log in to your <a href='https://www.csnpe-nslsc.canada.ca/en/home' target='_blank'>National Student Loans Service Centre</a> account to see how much you will save.</li>
-    </ul>
-
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "student_loan",
-        "https://www.csnpe-nslsc.canada.ca/en/home",
-        "Learn more about help with student loan payments"
-    )}}
-</div>
+    "student_loan",
+    "https://www.csnpe-nslsc.canada.ca/en/home",
+    "Learn more about help with student loan payments"
+  )}}
+{% endblock %}
