--- a/views/macros/benefit-result.njk
+++ b/views/macros/benefit-result.njk
@@ -1,8 +1,8 @@
-{% macro blueLI(strongText, text) %}
+{% macro benefitLi(strongText, text) %}
   <li>
-    <div class="bg-blue-200 p-5 m-1 text-blue-800">
-      <p class="relative m-0 pl-8">
-        <img src="{{ asset('/img/check-circle.svg') }}" class="w-6 h-6 mt-1 -ml-8 absolute fill-current" alt="">
+    <div>
+      <p>
+        <img src="{{ asset('/img/check-circle.svg') }}" alt="">
         <strong>{{ strongText | safe }}</strong> {% if text %}{{ text }}{% endif %}
       </p>
     </div>
@@ -13,7 +13,7 @@
   <a href="{{ url }}"
     data-gc-analytics-customclick="ESDC|EDSC:Covid19 Benefits:{{id}} button click"
     target="_blank"
-    class="full-width font-semibold button-link py-6 px-5 border shadow">
+    class="no-underline text-white px-4 py-2 bg-blue-800 hover:bg-blue-900 rounded text-center block sm:inline-block">
     {{ text }}
   </a>
 {% endmacro %}
