Updating Start Page
- Removing Subheader
- Updating content on Start Page
- Updating Button on Start Page
- Updating content on results page

--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -10,8 +10,7 @@
     </div>
 
     <div>
-        <p class="mb-8">{{ __('start.intro.2') | safe }}</p>
-        <h2 class="text-2xl">{{ __('start.subheader') }}</h2>
+        <p>{{ __('start.intro.2') }}</p>
         <p>{{ __('start.intro.3') }}</p>
     </div>
 
