--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -27,7 +27,7 @@
 
     {% if benefits.length > 0 %}
         <p>{{ __('results.eligibility_warning') | safe }}</p>
-        <p>{{ __('results.situation_changes') }}</p>
+        <p class="mb-8">{{ __('results.check_back') }}</p>
     {% endif %}
 
     <div>
@@ -40,7 +40,7 @@
                     <h2 class="text-4xl font-bold m-0">{{ __n('results_title', benefits.length) }}</h2>
                 </div>
                 <p class="px-4">{{ __("results.header_text") }}</p>
-                
+
                 <div data-cy="eligible-benefit-list">
                     {% for benefit in benefits %}
                         {% include "benefits/" + benefit + "-" + getLocale() +  ".njk" %}
@@ -81,7 +81,7 @@
             </div>
 
             <p class="font-light px-4">{{ __('results.unavailable_benefits_preamble') }}</p>
-            
+
             <button id="unavailableBenefitsButton" aria-controls="unavailableBenefitsList" aria-expanded="false" class="px-4 text-red-700 hidden">
                 <div class="closed">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="w-6 h-6 fill-current inline">
@@ -96,7 +96,7 @@
                     <span class="underline">{{ __('results.unavailable_close_link') }}</span>
                 </div>
             </button>
-            
+
             <div class="benefits__list mt-4" id="unavailableBenefitsList" aria-labelledby="unavailableBenefitsButton">
                 {% for benefit in unavailableBenefits %}
                     {% include "benefits/" + benefit + "-" + getLocale() +  ".njk" %}
