Adding a date for sending payments to seniors

--- a/views/benefits/oas-fr.njk
+++ b/views/benefits/oas-fr.njk
@@ -7,12 +7,12 @@
 {% endblock %}
 
 {% block featured_list_items %}
-  {{ benefitLi("Paiement unique de 300 $, non imposable, si vous êtes admissible à la pension de la Sécurité de vieillesse (SV) 
+  {{ benefitLi("Paiement unique de 300 $, non imposable, si vous êtes admissible à la pension de la Sécurité de vieillesse (SV)
     <br><br>
     OU paiement unique de 500 $, non imposable, si vous recevez le supplément de revenu garanti (SRG)
     <br><br>
     OU paiement unique de 500 $, non imposable, si vous recevez L’Allocation ou l’Allocation au survivant") }}
-  {{ benefitLi("Le paiement sera envoyé dès que possible") }}
+  {{ benefitLi("<strong>Dès le 6 juillet 2020</strong>") }}
 {% endblock %}
 
 {% block body %}
@@ -20,7 +20,7 @@
   <ul>
     <li>Vous recevrez ce paiement si vous êtes admissible à la pension ou aux programmes connexes de la SV en juin 2020.</li>
     <li>Vous devenez admissibles à la pension de la SV le mois suivant votre 65ème anniversaire. Si votre 65ème anniversaire est en juin 2020, vous ne recevrez pas ce paiement.</li>
-    <li>Les paiements seront déposés automatiquement. Vous n’avez pas à faire quoi que ce soit pour le recevoir.</li>
+    <li>Les paiements seront déposés automatiquement dès le 6 juillet. Vous n’avez pas à faire quoi que ce soit pour le recevoir.</li>
   </ul>
 {% endblock %}
 
