--- a/views/benefits/oas-en.njk
+++ b/views/benefits/oas-en.njk
@@ -8,11 +8,11 @@
 
 {% block featured_list_items %}
   {{ benefitLi("$300 one-time, tax-free payment if you are eligible for the Old Age Security (OAS) pension
-      <br><br> 
-      OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS) 
-      <br><br> 
+      <br><br>
+      OR $500 one-time, tax-free payment if you receive the Guaranteed Income Supplement (GIS)
+      <br><br>
       OR $500 one-time, tax-free payment if you receive the Allowance or the Allowance for the Survivor") }}
-  {{ benefitLi("Payments will be sent as soon as possible") }}
+  {{ benefitLi("<strong>Starting July 6, 2020</strong>") }}
 {% endblock %}
 
 {% block body %}
@@ -20,7 +20,7 @@
   <ul>
     <li>You’ll receive this payment if you are eligible to receive OAS or its related benefits in June 2020.</li>
     <li>You become eligible for OAS the month after you turn 65. So if you turn 65 in June, you will not receive this one-time payment.</li>
-    <li>Payments will be sent automatically. You don’t need to do anything to receive it.</li>
+    <li>Payments will be sent automatically, starting July 6, 2020. You don’t need to do anything to receive it.</li>
   </ul>
 {% endblock %}
 
