Replaced radio buttons with dropdown

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -12,6 +12,7 @@
 @import './components/_error-list';
 @import './components/_footer';
 @import './components/_header';
+@import './components/_dropdown';
 @import './components/_multiple-choice';
 @import './components/_banners';
 @import './components/_breakdown-table';
